--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,62 +1,6 @@
-<style>
-     :host {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        font-size: 14px;
-        color: #333;
-        box-sizing: border-box;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-    }
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        margin: 8px 0;
-    }
-
-    p {
-        margin: 0;
-    }
-
-    footer {
-        margin-top: 8px;
-        display: flex;
-        align-items: center;
-        line-height: 20px;
-    }
-    /* Responsive Styles */
-
-    @media screen and (max-width: 767px) {
-        .card-container>*:not(.circle-link),
-        .terminal {
-            width: 100%;
-        }
-        .card:not(.highlight-card) {
-            height: 16px;
-            margin: 8px 0;
-        }
-        .card.highlight-card span {
-            margin-left: 72px;
-        }
-        svg#rocket-smoke {
-            right: 120px;
-            transform: rotate(-5deg);
-        }
-    }
-</style>
-
-
-<div class="content">
-    <h1>Hello World</h1>
-
-    <!-- Footer -->
-    <footer>
-    </footer>
-
-
+<div class="container">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>
+<footer>
+</footer>
