--- a/src/app/category-details/category-details.component.html
+++ b/src/app/category-details/category-details.component.html
@@ -11,16 +11,17 @@
                             <input class="form-control form-control-sm mr-3 w-100" type="text" placeholder="Search" aria-label="Search" name="search" autocomplete="off" />
                             <i aria-hidden="true"></i>
                         </form>
-                        <div class="row">
-                            <div *ngFor="let category of categories.id" class="listing-column col-lg-4 col-md-6">
+                        <div class="row" style="padding-top: 20px;">
+                            <div *ngFor="let product of products" class="listing-column col-lg-4 col-md-6">
 
                                 <div class="card">
                                     <div class="card-header">
-                                        <h3>{{product.name}}</h3>
+                                        <h4>{{product.name}}</h4>
+                                        <p>{{product.price}} RON</p>
                                         <img class="img" src="https://i0.wp.com/reviveyouthandfamily.org/wp-content/uploads/2016/11/house-placeholder.jpg?resize=300%2C213&ssl=1" alt="img3">
                                     </div>
                                     <div class="card-body">
-                                        <h2>{{product.description}}</h2>
+                                        <p>{{product.description}}</p>
                                     </div>
                                 </div>
                             </div>
