--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,11 +21,11 @@
                                     <div class="card-header">
                                         <p>{{category.id}}</p>
                                         <h3>{{category.name}}</h3>
-                                        <img class="img" src="https://i0.wp.com/reviveyouthandfamily.org/wp-content/uploads/2016/11/house-placeholder.jpg?resize=300%2C213&ssl=1" alt="img3">
+                                        <img src="{{category.imgAddress}}" alt="img3">
                                     </div>
                                     <div class="card-body">
                                         <h2>{{category.description}}</h2>
-                                        <button class="btn btn-lg btn-block btn-dark" type="button" routerLink="/category-details" style="text-transform: uppercase;">Checkout</button>
+                                        <button class="btn btn-lg btn-block btn-dark" type="button" routerLink="/category-details/{{category.id}}" style="text-transform: uppercase;">Checkout</button>
                                     </div>
                                 </div>
                             </div>
