--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,12 +19,10 @@
 
                                 <div class="card">
                                     <div class="card-header">
-                                        <p>{{category.id}}</p>
                                         <h3>{{category.name}}</h3>
-                                        <img src="{{category.imgAddress}}" alt="img3">
+                                        <img class="img" src="{{category.imgAddress}}" alt="img3">
                                     </div>
                                     <div class="card-body">
-                                        <h2>{{category.description}}</h2>
                                         <button class="btn btn-lg btn-block btn-dark" type="button" routerLink="/category-details/{{category.id}}" style="text-transform: uppercase;">Checkout</button>
                                     </div>
                                 </div>
